# rt-hdr-tone-mapping

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh
src/: main.cpp
src/input_args_parser/: input_args_parser.cpp  input_args_parser.h
src/kernels/: convolution_kernels.cu  kernels.h
src/utils/: filter_pipeline.h  filter_utils.cpp  filter_utils.h  input_handler.cpp  input_handler.h  version.h.in
tests/unit_tests/: CMakeLists.txt  test_convolution.cpp  test_utils.cpp
